# android_hardware_qcom_media

./: Android.bp  Android.mk  Makefile.am  configure.ac  msm8953  product.mk
conf_files/atoll/: atoll.mk  media_codecs.xml  media_codecs_performance.xml  media_codecs_vendor.xml  media_profiles.xml
conf_files/bengal/: bengal.mk  media_codecs.xml  media_codecs_performance.xml  media_codecs_performance_khaje.xml  media_codecs_performance_khaje_v0.xml  media_codecs_performance_scuba_v0.xml  media_codecs_performance_v1.xml  media_codecs_vendor.xml  media_codecs_vendor_32.xml  media_codecs_vendor_audio.xml  media_codecs_vendor_khaje.xml  media_codecs_vendor_khaje_v0.xml  media_codecs_vendor_khaje_v0_32.xml  media_codecs_vendor_scuba_v0.xml  media_codecs_vendor_scuba_v0_32.xml  media_codecs_vendor_v1.xml  media_codecs_vendor_v1_32.xml  media_profiles.xml  media_profiles_khaje.xml  media_profiles_khaje_v0.xml  system_properties.xml
conf_files/kona/: kona.mk  media_codecs.xml  media_codecs_performance.xml  media_codecs_vendor.xml  media_codecs_vendor_audio.xml  media_profiles.xml  system_properties.xml
conf_files/lito/: lito.mk  media_codecs.xml  media_codecs_performance.xml  media_codecs_performance_lagoon_v0.xml  media_codecs_performance_lagoon_v1.xml  (+8 more)
dashplayer/: DashFactory.cpp  DashPlayer.cpp  DashPlayerDecoder.cpp  DashPlayerDriver.cpp  DashPlayerRenderer.cpp  DashPlayerStats.cpp
hyp-intercept/: Android.mk  Makefile.am  hypv_intercept.cpp
hypv-intercept/: Android.mk  Makefile.am  hypv_intercept.cpp  hypv_intercept.h
libarbitrarybytes/: Android.mk  Makefile.am
libarbitrarybytes/inc/: frameparser.h  h264_utils.h  hevc_utils.h
libarbitrarybytes/src/: frameparser.cpp  h264_utils.cpp  hevc_utils.cpp
libc2dcolorconvert/: Android.mk  C2DColorConverter.cpp  C2DColorConverter.h  Makefile.am
libplatformconfig/: Android.mk  ConfigParser.cpp  ConfigParser.h  Makefile.am  PlatformConfig.cpp  PlatformConfig.h
libsidebandstreamhandle/: Android.mk  SidebandHandleBase.h  SidebandStreamHandle.cpp
libstagefrighthw/: Android.mk  QComOMXMetadata.h  QComOMXPlugin.cpp  QComOMXPlugin.h
media-prop/: init.qti.media.rc  init.qti.media.sh
mm-core/: Android.mk  Makefile.am
mm-video-v4l2/: Android.mk
msm8998/: Android.mk
videopp/: Android.mk
(+232 files in other folders)
